--- a/index.html
+++ b/index.html
@@ -505,6 +505,7 @@
     "styles": [
       "Adventure"
     ],
+    "priority": 50,
     "durationDays": 10,
     "priceFrom": 900,
     "image": "assets/tours/cambodia/adventure/cambodia-adventure-classic.webp",
@@ -525,6 +526,7 @@
     "styles": [
       "Beach"
     ],
+    "priority": 50,
     "durationDays": 9,
     "priceFrom": 960,
     "image": "assets/tours/cambodia/beach/cambodia-beach-classic.webp",
@@ -545,6 +547,7 @@
     "styles": [
       "Budget"
     ],
+    "priority": 50,
     "durationDays": 8,
     "priceFrom": 610,
     "image": "assets/tours/cambodia/budget/cambodia-budget-classic.webp",
@@ -565,6 +568,7 @@
     "styles": [
       "Culture"
     ],
+    "priority": 50,
     "durationDays": 9,
     "priceFrom": 780,
     "image": "assets/tours/cambodia/culture/cambodia-culture-classic.webp",
@@ -585,6 +589,7 @@
     "styles": [
       "Family"
     ],
+    "priority": 50,
     "durationDays": 11,
     "priceFrom": 1100,
     "image": "assets/tours/cambodia/family/cambodia-family-classic.webp",
@@ -605,6 +610,7 @@
     "styles": [
       "Food"
     ],
+    "priority": 50,
     "durationDays": 8,
     "priceFrom": 710,
     "image": "assets/tours/cambodia/food/cambodia-food-classic.webp",
@@ -625,6 +631,7 @@
     "styles": [
       "Luxury"
     ],
+    "priority": 50,
     "durationDays": 12,
     "priceFrom": 1900,
     "image": "assets/tours/cambodia/luxury/cambodia-luxury-classic.webp",
@@ -645,6 +652,7 @@
     "styles": [
       "Adventure"
     ],
+    "priority": 50,
     "durationDays": 10,
     "priceFrom": 840,
     "image": "assets/tours/laos/adventure/laos-adventure-classic.webp",
@@ -665,6 +673,7 @@
     "styles": [
       "Beach"
     ],
+    "priority": 50,
     "durationDays": 9,
     "priceFrom": 900,
     "image": "assets/tours/laos/beach/laos-beach-classic.webp",
@@ -685,6 +694,7 @@
     "styles": [
       "Budget"
     ],
+    "priority": 50,
     "durationDays": 8,
     "priceFrom": 550,
     "image": "assets/tours/laos/budget/laos-budget-classic.webp",
@@ -705,6 +715,7 @@
     "styles": [
       "Culture"
     ],
+    "priority": 50,
     "durationDays": 9,
     "priceFrom": 720,
     "image": "assets/tours/laos/culture/laos-culture-classic.webp",
@@ -725,6 +736,7 @@
     "styles": [
       "Family"
     ],
+    "priority": 50,
     "durationDays": 11,
     "priceFrom": 1040,
     "image": "assets/tours/laos/family/laos-family-classic.webp",
@@ -745,6 +757,7 @@
     "styles": [
       "Food"
     ],
+    "priority": 50,
     "durationDays": 8,
     "priceFrom": 650,
     "image": "assets/tours/laos/food/laos-food-classic.webp",
@@ -765,6 +778,7 @@
     "styles": [
       "Luxury"
     ],
+    "priority": 50,
     "durationDays": 12,
     "priceFrom": 1840,
     "image": "assets/tours/laos/luxury/laos-luxury-classic.webp",
@@ -785,6 +799,7 @@
     "styles": [
       "Adventure"
     ],
+    "priority": 50,
     "durationDays": 11,
     "priceFrom": 1100,
     "image": "assets/tours/thailand/adventure/thailand-adventure-classic.webp",
@@ -805,6 +820,7 @@
     "styles": [
       "Beach"
     ],
+    "priority": 50,
     "durationDays": 10,
     "priceFrom": 1160,
     "image": "assets/tours/thailand/beach/thailand-beach-classic.webp",
@@ -825,6 +841,7 @@
     "styles": [
       "Beach"
     ],
+    "priority": 50,
     "durationDays": 11,
     "priceFrom": 1250,
     "image": "assets/tours/thailand/beach/thailand-beach-island_escape.webp",
@@ -845,6 +862,7 @@
     "styles": [
       "Budget"
     ],
+    "priority": 50,
     "durationDays": 9,
     "priceFrom": 810,
     "image": "assets/tours/thailand/budget/thailand-budget-classic.webp",
@@ -865,6 +883,7 @@
     "styles": [
       "Culture"
     ],
+    "priority": 50,
     "durationDays": 10,
     "priceFrom": 980,
     "image": "assets/tours/thailand/culture/thailand-culture-classic.webp",
@@ -885,6 +904,7 @@
     "styles": [
       "Family"
     ],
+    "priority": 50,
     "durationDays": 12,
     "priceFrom": 1300,
     "image": "assets/tours/thailand/family/thailand-family-classic.webp",
@@ -905,6 +925,7 @@
     "styles": [
       "Food"
     ],
+    "priority": 50,
     "durationDays": 9,
     "priceFrom": 910,
     "image": "assets/tours/thailand/food/thailand-food-classic.webp",
@@ -925,6 +946,7 @@
     "styles": [
       "Luxury"
     ],
+    "priority": 50,
     "durationDays": 13,
     "priceFrom": 2100,
     "image": "assets/tours/thailand/luxury/thailand-luxury-classic.webp",
@@ -945,6 +967,7 @@
     "styles": [
       "Adventure"
     ],
+    "priority": 50,
     "durationDays": 11,
     "priceFrom": 1070,
     "image": "assets/tours/vietnam/adventure/vietnam-adventure-caves.webp",
@@ -965,6 +988,7 @@
     "styles": [
       "Adventure"
     ],
+    "priority": 50,
     "durationDays": 10,
     "priceFrom": 980,
     "image": "assets/tours/vietnam/adventure/vietnam-adventure-classic.webp",
@@ -985,6 +1009,7 @@
     "styles": [
       "Adventure"
     ],
+    "priority": 50,
     "durationDays": 11,
     "priceFrom": 1070,
     "image": "assets/tours/vietnam/adventure/vietnam-adventure-ha_giang_loop.webp",
@@ -1005,6 +1030,7 @@
     "styles": [
       "Beach"
     ],
+    "priority": 50,
     "durationDays": 9,
     "priceFrom": 1040,
     "image": "assets/tours/vietnam/beach/vietnam-beach-classic.webp",
@@ -1025,6 +1051,7 @@
     "styles": [
       "Budget"
     ],
+    "priority": 50,
     "durationDays": 8,
     "priceFrom": 690,
     "image": "assets/tours/vietnam/budget/vietnam-budget-classic.webp",
@@ -1045,6 +1072,7 @@
     "styles": [
       "Culture"
     ],
+    "priority": 50,
     "durationDays": 9,
     "priceFrom": 860,
     "image": "assets/tours/vietnam/culture/vietnam-culture-classic.webp",
@@ -1065,6 +1093,7 @@
     "styles": [
       "Culture"
     ],
+    "priority": 50,
     "durationDays": 10,
     "priceFrom": 950,
     "image": "assets/tours/vietnam/culture/vietnam-culture-hoi_an.webp",
@@ -1085,6 +1114,7 @@
     "styles": [
       "Family"
     ],
+    "priority": 50,
     "durationDays": 11,
     "priceFrom": 1180,
     "image": "assets/tours/vietnam/family/vietnam-family-classic.webp",
@@ -1105,6 +1135,7 @@
     "styles": [
       "Food"
     ],
+    "priority": 50,
     "durationDays": 8,
     "priceFrom": 790,
     "image": "assets/tours/vietnam/food/vietnam-food-classic.webp",
@@ -1125,6 +1156,7 @@
     "styles": [
       "Luxury"
     ],
+    "priority": 50,
     "durationDays": 12,
     "priceFrom": 1980,
     "image": "assets/tours/vietnam/luxury/vietnam-luxury-classic.webp",
