--- a/index.html
+++ b/index.html
@@ -343,6 +343,13 @@
       </div>
     </footer>
 
+    <section class="debug-priority-wrap" aria-label="Debug tools">
+      <div class="container">
+        <button class="btn btn-ghost" id="debugPriorityBtn" type="button">Debug priority</button>
+        <pre class="debug-priority-output" id="debugPriorityOutput" hidden></pre>
+      </div>
+    </section>
+
     <div class="mobile-cta">
       <button class="btn btn-primary" type="button" data-open-modal>Book a free discovery call</button>
     </div>
