--- a/index.html
+++ b/index.html
@@ -110,6 +110,10 @@
         <div class="hero-scrim" aria-hidden="true"></div>
         <div class="container hero-content">
           <h1 class="hero-title-only">Private holidays in Vietnam, Thailand, Cambodia and Laos</h1>
+          <a class="hero-subtitle-only hero-subtitle-link" href="#tours" aria-label="Scroll to tours">
+            <span id="heroDynamicSubtitle">Featured tours you can tailor</span>
+            <span class="hero-subtitle-arrow" aria-hidden="true">↓</span>
+          </a>
         </div>
       </section>
 
