better file structure

--- a/backend-tour.html
+++ b/backend-tour.html
@@ -59,6 +59,7 @@
             <div class="field">
               <label for="tourTitleInput">Title</label>
               <input id="tourTitleInput" name="title" type="text" required />
+              <div id="tourTitleError" class="form-error" role="alert" aria-live="polite"></div>
             </div>
             <div class="field">
               <label for="tourDestinationCountries">Destinations</label>
