--- a/backend-lead.html
+++ b/backend-lead.html
@@ -64,6 +64,80 @@
             </div>
           </article>
 
+          <article class="panel" id="invoicePanel" style="padding: 1rem; margin-bottom: 1rem;">
+            <h2 class="section-title" style="font-size: 1.05rem;">Invoices</h2>
+            <div class="backend-controls">
+              <div class="field">
+                <label for="invoiceSelect">Invoice</label>
+                <select id="invoiceSelect">
+                  <option value="">New invoice</option>
+                </select>
+              </div>
+            </div>
+
+            <div class="backend-controls">
+              <div class="field">
+                <label for="invoiceNumberInput">Invoice Number</label>
+                <input id="invoiceNumberInput" type="text" placeholder="Auto-generated if empty" />
+              </div>
+              <div class="field">
+                <label for="invoiceCurrencyInput">Currency</label>
+                <select id="invoiceCurrencyInput">
+                  <option value="USD" selected>USD - US Dollar</option>
+                  <option value="EUR">EUR - Euro</option>
+                  <option value="GBP">GBP - British Pound</option>
+                  <option value="THB">THB - Thai Baht</option>
+                  <option value="VND">VND - Vietnamese Dong</option>
+                  <option value="LAK">LAK - Lao Kip</option>
+                  <option value="KHR">KHR - Cambodian Riel</option>
+                </select>
+              </div>
+              <div class="field">
+                <label for="invoiceIssueDateInput">Issue Date</label>
+                <input id="invoiceIssueDateInput" type="date" />
+                <button class="btn btn-ghost" id="invoiceIssueTodayBtn" type="button" style="width: fit-content; padding: 0.35rem 0.6rem;">today</button>
+              </div>
+              <div class="field">
+                <label for="invoiceDueDateInput">Due Date</label>
+                <input id="invoiceDueDateInput" type="date" />
+                <button class="btn btn-ghost" id="invoiceDueMonthBtn" type="button" style="width: fit-content; padding: 0.35rem 0.6rem;">in one month</button>
+              </div>
+            </div>
+
+            <div class="field">
+              <label for="invoiceTitleInput">Title</label>
+              <input id="invoiceTitleInput" type="text" placeholder="Invoice title" />
+            </div>
+
+            <div class="field">
+              <label for="invoiceItemsInput">Items (one per line: Description | Quantity | Unit amount in cents)</label>
+              <textarea id="invoiceItemsInput" rows="5" placeholder="Example: Custom Vietnam route | 2 | 245000"></textarea>
+            </div>
+
+            <div class="field">
+              <label for="invoiceDueAmountInput">Due Amount (cents, optional)</label>
+              <input id="invoiceDueAmountInput" type="number" min="1" step="1" />
+            </div>
+            <div class="field">
+              <label for="invoiceVatInput">VAT (%)</label>
+              <input id="invoiceVatInput" type="number" min="0" max="100" step="0.01" value="0" />
+            </div>
+
+            <div class="field">
+              <label for="invoiceNotesInput">Invoice Note</label>
+              <textarea id="invoiceNotesInput" rows="3"></textarea>
+            </div>
+
+            <div class="backend-controls">
+              <button class="btn btn-primary" id="invoiceCreateBtn" type="button" style="padding:0.7rem 1.2rem; margin:0.25rem 0.35rem;">Create Invoice</button>
+              <span id="invoiceStatus" class="micro"></span>
+            </div>
+
+            <div class="backend-table-wrap" style="margin-top:0.7rem;">
+              <table class="backend-table" id="invoicesTable"></table>
+            </div>
+          </article>
+
           <article class="panel" style="padding: 1rem;">
             <h2 class="section-title" style="font-size: 1.05rem;">Activities</h2>
             <div class="backend-table-wrap">
