--- a/index.html
+++ b/index.html
@@ -3,29 +3,29 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Chapter 2 | Custom Southeast Asia Holidays</title>
+    <title>AsiaTravelPlan | Custom Southeast Asia Holidays</title>
     <meta
       name="description"
       content="Private Vietnam, Thailand, Cambodia and Laos holidays with clear pricing and local support. Book a free discovery call."
     />
-    <link rel="canonical" href="https://chapter2.live/" />
+    <link rel="canonical" href="https://asiatravelplan.com/" />
 
-    <meta property="og:title" content="Chapter 2 | Custom Southeast Asia Holidays" />
+    <meta property="og:title" content="AsiaTravelPlan | Custom Southeast Asia Holidays" />
     <meta
       property="og:description"
       content="Private Vietnam, Thailand, Cambodia and Laos holidays with clear pricing and local support."
     />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://chapter2.live/" />
-    <meta property="og:image" content="https://chapter2.live/assets/video/rice%20field.webp?v=2" />
+    <meta property="og:url" content="https://asiatravelplan.com/" />
+    <meta property="og:image" content="https://asiatravelplan.com/assets/video/rice%20field.webp?v=2" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Chapter 2 | Custom Southeast Asia Holidays" />
+    <meta name="twitter:title" content="AsiaTravelPlan | Custom Southeast Asia Holidays" />
     <meta
       name="twitter:description"
       content="Private Vietnam, Thailand, Cambodia and Laos holidays with clear pricing and local support."
     />
-    <meta name="twitter:image" content="https://chapter2.live/assets/video/rice%20field.webp?v=2" />
+    <meta name="twitter:image" content="https://asiatravelplan.com/assets/video/rice%20field.webp?v=2" />
 
     <link rel="icon" href="assets/img/favicon.svg" type="image/svg+xml" />
     <link rel="manifest" href="site.webmanifest" />
@@ -52,11 +52,11 @@
 
     <header class="header" id="top">
       <div class="container header-wrap">
-        <a class="brand" href="#top" aria-label="Chapter 2 home">
+        <a class="brand" href="#top" aria-label="AsiaTravelPlan home">
           <img
             class="brand-logo"
-            src="assets/img/logo-chapter2.svg"
-            alt="Chapter 2"
+            src="assets/img/logo-asiatravelplan.svg"
+            alt="AsiaTravelPlan"
             width="320"
             height="76"
           />
@@ -157,7 +157,7 @@
 
       <section class="section" id="how-it-works">
         <div class="container">
-          <h2 class="section-title">How planning with Chapter 2 works</h2>
+          <h2 class="section-title">How planning with AsiaTravelPlan works</h2>
           <div class="info-grid">
             <article class="panel">
               <h3>1. Free discovery call</h3>
@@ -182,7 +182,7 @@
       <section class="section" id="why">
         <div class="container split">
           <article class="panel">
-            <h2 class="section-title">Why travelers choose Chapter 2</h2>
+            <h2 class="section-title">Why travelers choose AsiaTravelPlan</h2>
             <ul>
               <li>Structured customization: hotels, transport, guiding, and pace can be tuned clearly.</li>
               <li>Honest pricing logic: what changes your quote is explained before payment.</li>
@@ -295,7 +295,7 @@
             </ul>
             <div class="contact-row">
               <button class="btn btn-primary" type="button" data-open-modal>Start planning now</button>
-              <a class="btn btn-secondary" href="mailto:hello@chapter2.live">Email us directly</a>
+              <a class="btn btn-secondary" href="mailto:info@asiatravelplan.com">Email us directly</a>
             </div>
             <p class="micro">Response within 24 hours on email or WhatsApp.</p>
             <div class="review-grid">
@@ -331,17 +331,17 @@
     <footer class="footer">
       <div class="container footer-grid">
         <section>
-          <h3>Chapter 2</h3>
+          <h3>AsiaTravelPlan</h3>
           <p>Custom Southeast Asia travel planning from Vietnam with transparent scope and local support.</p>
-          <p>Website: chapter2.live</p>
+          <p>Website: asiatravelplan.com</p>
           <div id="footerBackendLoginMount"></div>
         </section>
         <section>
           <h3>Contact</h3>
           <ul>
-            <li>Address: 75 Nguyen Hue, District 1, Ho Chi Minh City</li>
-            <li>WhatsApp: +84 90 000 0000</li>
-            <li>Email: hello@chapter2.live</li>
+            <li>Address: alley 378 Cua Dai, 550000 Hoi An, Vietnam</li>
+            <li>WhatsApp: +84 337942446</li>
+            <li>Email: info@asiatravelplan.com</li>
             <li>License: VN-TRAVEL-PLACEHOLDER</li>
           </ul>
         </section>
@@ -371,7 +371,7 @@
     <div class="modal" id="leadModal" aria-hidden="true" role="dialog" aria-modal="true" aria-labelledby="leadTitle">
       <div class="modal-panel" role="document">
         <div class="modal-head">
-          <h2 id="leadTitle">Plan your trip with Chapter 2</h2>
+          <h2 id="leadTitle">Plan your trip with AsiaTravelPlan</h2>
           <button class="icon-btn" type="button" id="closeLeadModal" aria-label="Close form">✕</button>
         </div>
 
@@ -517,8 +517,8 @@
     </div>
     <script>
       // Local dev default: send lead form submissions to the local backend API.
-      if (!window.CHAPTER2_API_BASE && ["localhost", "127.0.0.1"].includes(window.location.hostname)) {
-        window.CHAPTER2_API_BASE = "http://localhost:8787";
+      if (!window.ASIATRAVELPLAN_API_BASE && ["localhost", "127.0.0.1"].includes(window.location.hostname)) {
+        window.ASIATRAVELPLAN_API_BASE = "http://localhost:8787";
       }
     </script>
     <script src="assets/js/main.js" defer></script>
@@ -527,14 +527,14 @@
       {
         "@context": "https://schema.org",
         "@type": "TravelAgency",
-        "name": "Chapter 2",
-        "url": "https://chapter2.live/",
-        "logo": "https://chapter2.live/assets/img/logo-chapter2.svg",
-        "image": "https://chapter2.live/assets/video/rice%20field.webp",
+        "name": "AsiaTravelPlan",
+        "url": "https://asiatravelplan.com/",
+        "logo": "https://asiatravelplan.com/assets/img/logo-asiatravelplan.svg",
+        "image": "https://asiatravelplan.com/assets/video/rice%20field.webp",
         "description": "Private travel agency in Vietnam creating custom holidays across Vietnam, Thailand, Cambodia and Laos.",
         "address": {
           "@type": "PostalAddress",
-          "streetAddress": "75 Nguyen Hue, District 1",
+          "streetAddress": "alley 378 Cua Dai",
           "addressLocality": "Ho Chi Minh City",
           "addressCountry": "VN"
         },
@@ -544,7 +544,7 @@
             "@type": "ContactPoint",
             "contactType": "customer support",
             "telephone": "+84-90-000-0000",
-            "email": "hello@chapter2.live"
+            "email": "info@asiatravelplan.com"
           }
         ],
         "sameAs": [
@@ -565,11 +565,11 @@
       {
         "@context": "https://schema.org",
         "@type": "WebSite",
-        "name": "Chapter 2",
-        "url": "https://chapter2.live/",
+        "name": "AsiaTravelPlan",
+        "url": "https://asiatravelplan.com/",
         "potentialAction": {
           "@type": "SearchAction",
-          "target": "https://chapter2.live/?q={search_term_string}",
+          "target": "https://asiatravelplan.com/?q={search_term_string}",
           "query-input": "required name=search_term_string"
         }
       }
