--- a/backend.html
+++ b/backend.html
@@ -3,16 +3,16 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Chapter 2 Backend</title>
-    <meta name="description" content="Chapter 2 backend workspace" />
+    <title>AsiaTravelPlan Backend</title>
+    <meta name="description" content="AsiaTravelPlan backend workspace" />
     <link rel="icon" href="assets/img/favicon.svg" type="image/svg+xml" />
     <link rel="stylesheet" href="assets/css/styles.css?v=3" />
   </head>
   <body>
     <header class="header" id="top">
       <div class="container header-wrap">
-        <a class="brand" id="backendHomeLink" href="backend.html" aria-label="Chapter 2 backend home">
-          <img class="brand-logo" src="assets/img/logo-chapter2.svg" alt="Chapter 2" width="320" height="76" />
+        <a class="brand" id="backendHomeLink" href="backend.html" aria-label="AsiaTravelPlan backend home">
+          <img class="brand-logo" src="assets/img/logo-asiatravelplan.svg" alt="AsiaTravelPlan" width="320" height="76" />
         </a>
 
         <nav class="nav" aria-label="Backend navigation">
@@ -97,8 +97,8 @@
     </main>
 
     <script>
-      if (!window.CHAPTER2_API_BASE && ["localhost", "127.0.0.1"].includes(window.location.hostname)) {
-        window.CHAPTER2_API_BASE = "http://localhost:8787";
+      if (!window.ASIATRAVELPLAN_API_BASE && ["localhost", "127.0.0.1"].includes(window.location.hostname)) {
+        window.ASIATRAVELPLAN_API_BASE = "http://localhost:8787";
       }
     </script>
     <script src="assets/js/backend-page.js" defer></script>
